--- a/java/app/build.gradle
+++ b/java/app/build.gradle
@@ -4,7 +4,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("xxx.jks")
+            storeFile file("xxx.xxx")
             keyAlias 'xxx'
             keyPassword 'xxx'
             storePassword 'xxx'
@@ -49,8 +49,8 @@ dependencies {
 
     implementation fileTree(include: ['*.jar',], dir: 'libs')
     implementation 'com.android.support:support-compat:28.0.0'
-    implementation "com.google.code.gson:gson:2.8.5"
-    implementation('com.huawei.hms:hwid:4.0.4.300')
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.huawei.hms:hwid:5.0.3.301'
     implementation "com.squareup.okhttp3:okhttp:3.14.2"
     implementation 'com.squareup.okio:okio:1.14.1'
 }
