--- a/kotlin/app/build.gradle
+++ b/kotlin/app/build.gradle
@@ -1,35 +1,15 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.huawei.agconnect'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.huawei.agconnect'
-
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
-
-    defaultConfig {
-        applicationId "com.huawei.hmssample"
-        minSdkVersion 19
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-        multiDexEnabled true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 
     signingConfigs {
         release {
             storeFile file("xxx.xxx")
-            storePassword "xxx"
-            keyAlias "xxx"
-            keyPassword "xxx"
-            v1SigningEnabled
-            v2SigningEnabled
+            keyAlias 'xxx'
+            keyPassword 'xxx'
+            storePassword 'xxx'
         }
     }
 
@@ -46,23 +26,35 @@ android {
         }
     }
 
-    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
+    compileSdkVersion 28
+    defaultConfig {
+        applicationId "com.huawei.codelab.hwid"
+        minSdkVersion 17
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.huawei.hms:hwid:4.0.4.300'
-    implementation 'com.squareup.okhttp3:okhttp:4.5.0'
-    implementation 'com.squareup.okio:okio:2.5.0'
-    implementation 'com.auth0:java-jwt:3.9.0'
-    implementation 'com.auth0:jwks-rsa:0.8.3'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    ext.JUNIT_VERSION = '4.12'
+    ext.ESPRESSO_VERSION = '2.2.2'
+
+    implementation fileTree(include: ['*.jar',], dir: 'libs')
+    implementation 'com.android.support:support-compat:28.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.huawei.hms:hwid:5.0.3.301'
+    implementation "com.squareup.okhttp3:okhttp:3.14.2"
+    implementation 'com.squareup.okio:okio:1.14.1'
 }
+
+repositories { flatDir { dirs '../aars' } }
