--- a/kotlin/app/src/main/AndroidManifest.xml
+++ b/kotlin/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.huawei.hmssample">
-
     <!--HMS-SDK need network permission while check if upgrade is neccessary-->
     <uses-permission android:name="android.permission.INTERNET" />
     <!--HMS-SDK need network permission while hms is upgrading-->
@@ -24,16 +23,14 @@
 
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!--HuaweiId-->
         <activity
             android:name=".HuaweiIdActivity"
-            android:theme="@style/AppFullScreenTheme"
             android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,6 +38,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
