--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -1,27 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext.kotlin_version = '1.3.31'
     repositories {
+        // Codelab Configuration - HMS SDK
+        maven { url 'http://developer.huawei.com/repo/' }
         google()
         jcenter()
-        maven { url 'https://developer.huawei.com/repo/' }
-
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        // Codelab Configuration - agc plugin
+        classpath 'com.huawei.agconnect:agcp:1.2.0.300'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.huawei.agconnect:agcp:1.3.1.300'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
+        // Codelab Configuration - HMS SDK
+        maven { url 'http://developer.huawei.com/repo/' }
         google()
         jcenter()
-        maven { url 'https://developer.huawei.com/repo/' }
     }
 }
 
