--- a/java/app/build.gradle
+++ b/java/app/build.gradle
@@ -24,10 +24,11 @@ android {
         }
     }
 
-    compileSdkVersion 28
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.huawei.codelab.hwid"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -48,11 +49,9 @@ dependencies {
     ext.ESPRESSO_VERSION = '2.2.2'
 
     implementation fileTree(include: ['*.jar',], dir: 'libs')
-    implementation 'com.android.support:support-compat:28.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.huawei.hms:hwid:5.0.5.300'
-    implementation "com.squareup.okhttp3:okhttp:3.14.2"
-    implementation 'com.squareup.okio:okio:1.14.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "com.google.code.gson:gson:2.8.5"
+    implementation 'com.huawei.hms:hwid:5.1.0.301'
 }
 
 repositories { flatDir { dirs '../aars' } }
