--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -4,12 +4,12 @@ buildscript {
     ext.kotlin_version = '1.3.31'
     repositories {
         // Codelab Configuration - HMS SDK
-        maven { url 'http://developer.huawei.com/repo/' }
+        maven { url 'https://developer.huawei.com/repo/' }
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         // Codelab Configuration - agc plugin
         classpath 'com.huawei.agconnect:agcp:1.4.2.300'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -19,7 +19,7 @@ buildscript {
 allprojects {
     repositories {
         // Codelab Configuration - HMS SDK
-        maven { url 'http://developer.huawei.com/repo/' }
+        maven { url 'https://developer.huawei.com/repo/' }
         google()
         jcenter()
     }
